fix squashing logo

--- a/markdown.css
+++ b/markdown.css
@@ -267,6 +267,7 @@ img.logo {
 
 img.header {
     height: 10em;
+    object-fit: contain;
 }
 
 /* pre and code */
